syntax = "proto3";

package GrpcIdentity;

service Identity {
	rpc GetGuestFullName(GetGuestFullNameRequest) returns (GetGuestFullNameResponse);
}


message GetGuestFullNameResponse{
	string guestFullName = 1;
}

message GetGuestFullNameRequest{
	string guestId = 1;
}